--- a/rxjs/package.json
+++ b/rxjs/package.json
@@ -2,6 +2,7 @@
   "name": "rxjs",
   "description": "Playing with RxJS",
   "dependencies": {
+    "lodash": "^4.6.1",
     "rx": "^4.0.8"
   },
   "repository": {
